# pierre_mcp_server

./: .dockerignore  .mcp.json  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Pierre.bat  README.md  TAPIRIIK_START.html  deploy.sh  llms.txt  package.json
.claude/: README.md  settings.json
.claude/agents/: algorithm-validator.md  clippy-strict-validator.md  github-release-cicd-manager.md  protocol-compliance.md  security-auditor.md  test-orchestrator.md
.claude/skills/check-input-validation/: SKILL.md
.claude/skills/check-no-secrets/: SKILL.md
.claude/skills/finish-worktree/: finish-worktree.sh
.claude/skills/generate-sdk-types/: SKILL.md
.claude/skills/run-full-test-suite/: SKILL.md
.claude/skills/security-review/: SKILL.md
.claude/skills/strict-clippy-check/: SKILL.md
.claude/skills/test-mcp-compliance/: SKILL.md
.claude/skills/validate-architecture/: SKILL.md
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  mcp-compliance.yml  sdk-release.yml  sdk-tests.yml
book/src/: architecture.md  build.md  ci-cd.md  development.md  getting-started.md  release_how_to.md  testing.md
crates/pierre-core/src/models/: audit.rs  key_rotation.rs
docker/compose/: docker-compose.deploy.yml
docker/images/server/: Dockerfile.prod  entrypoint.prod.sh
docker/nginx/: nginx.conf
docs/: GUIDE_COACH_PIERRE.md  GUIDE_CONNEXION.md  GUIDE_TAPIRIIK.md  STRAVA_UPLOAD_README.md
frontend/: index.html  vite.config.ts
frontend/public/: manifest.json  sw.js
frontend/src/: index.css  main.tsx  registerSW.ts
frontend/src/components/: AdminConfiguration.tsx  ApiKeyList.tsx  CoachLibraryTab.tsx  Dashboard.tsx  OverviewTab.tsx  ProviderConnectionCards.tsx  SystemCoachesTab.tsx  ToolAvailability.tsx  UnifiedConnections.tsx  UsageAnalytics.tsx  UserSettings.tsx
frontend/src/components/__tests__/: Dashboard.simple.test.tsx
frontend/src/components/chat/: ProviderConnectionModal.tsx
frontend/src/components/ui/: Tabs.tsx
frontend/src/components/wellness/: ActivitiesListPage.tsx  ActivityCard.tsx  BilanCorporelPage.tsx  BodyBatteryCard.tsx  CaloriesCard.tsx  CoachBilanCard.tsx  CoachDebriefingCard.tsx  CoffeeTracker.tsx  HealthSnapshotCard.tsx  HealthSnapshotPage.tsx  HeartRateCard.tsx  HydrationTracker.tsx  IntensityMinutesCard.tsx  NutritionTracker.tsx  RideReportPage.tsx  SleepCard.tsx  SleepFullPage.tsx  StepsCard.tsx  StressCard.tsx  WaistTracker.tsx  WeightCard.tsx  WeightFullPage.tsx  WellnessCardShell.tsx  WellnessChatWindow.tsx  WellnessDashboard.tsx  WellnessTab.tsx  sportUtils.ts
frontend/src/contexts/: WebSocketProvider.tsx
frontend/src/hooks/: useChartResponsive.ts  useNutrition.ts  useWaist.ts  useWellnessData.ts
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: fr.json
frontend/src/services/api/: oauth.ts
frontend/src/types/: chart.ts  wellness.ts
frontend/src/utils/: openFoodFacts.ts
garmin_data_extract/: fetch_garmin_live.py
migrations/: 20260211000001_password_reset_tokens.sql
scripts/: README.md
scripts/ci/: architectural-validation.sh  lint-and-test.sh  pre-push-validate.sh
scripts/release/: prepare-release.sh  validate-release.sh
scripts/testing/: test-postgres.sh
sdk/: MCP_COMPLIANCE.md  README.md  TYPE_GENERATION.md  package.json
sdk/src/: types.ts
src/: health.rs  lib.rs  rate_limiting.rs
src/config/routes/: fitness.rs
src/database/: chat.rs  coach_authors.rs  coaches.rs  fitness_configurations.rs  mod.rs  password_reset_tokens.rs  provider_connections.rs  recipes.rs  user_oauth_tokens.rs  users.rs
src/database/repositories/: coaches_repository.rs  fitness_config_repository.rs  mod.rs  oauth_token_repository.rs  recipe_repository.rs  tenant_repository.rs  user_repository.rs
src/database_plugins/: factory.rs  mod.rs  postgres.rs
src/formatters/: mod.rs
src/mcp/: multitenant.rs  progress.rs  tenant_isolation.rs
src/protocols/universal/: auth_service.rs
src/protocols/universal/handlers/: coaches.rs  connections.rs  recipes.rs
src/providers/: caching_provider.rs  mod.rs
src/routes/: chat.rs  coaches.rs  mod.rs  oauth2.rs  store.rs  web_admin.rs  wellness.rs
src/routes/admin/: mod.rs  store.rs  users.rs
src/routes/auth/: mod.rs  types.rs
src/security/: audit.rs  cookies.rs  key_rotation.rs  mod.rs
src/tools/: providers.rs
src/tools/implementations/: admin.rs  coaches.rs  connection.rs  fitness_config.rs  recipes.rs
tests/: admin_user_approval_test.rs  chat_database_test.rs  coach_authors_test.rs  coaches_database_test.rs  coaches_routes_test.rs  coaches_version_test.rs  common.rs  configuration_tools_integration_test.rs  database_parity_test.rs  database_plugins_comprehensive_test.rs  database_plugins_postgresql_test.rs  database_plugins_test.rs  database_tokens_test.rs  database_users_test.rs  mcp_multitenant_comprehensive_test.rs  mcp_multitenant_test.rs  multitenant_integration.rs  password_reset_token_test.rs  phase0_tenant_oauth_isolation_test.rs  store_admin_routes_test.rs  store_routes_test.rs  tenant_rate_limiting_test.rs  test_all_tools.rs  user_oauth_app_test.rs
tests/integration/infrastructure/: test_server.rs
